# booki

./: .gitignore  AGENTS.md  Booki.slnx  LICENSE  README.md  SECURITY.md  manifest.json  options.html  package-lock.json  package.json  popup.html  sidepanel.html  vite.config.js
.github/: dependabot.yml
.github/workflows/: build-windows.yml  build-winui.yml  release-winui.yml  release.yml
assets/emoji/: LICENSE.txt
booki-main/: AGENTS.md  README.md  manifest.json  options.html  sidepanel.html
booki-main/src/: background.js  i18n.js  options.js  shared.js  sidepanel.js  styles.css
docs/: ARCHITECTURE.md  WINUI3.md
scripts/: check-icons.mjs  check-text-encoding.mjs  gen-installer-bmps.py
src/: api.js  background.js  changelog-data.js  changelog.html  changelog.js  dock.js  emoji.js  fluent-theme.js  i18n-extra.js  i18n.js  icon-library.js  icons.js  index.html  notch-mode.js  notch.html  notch.js  options.js  pins.js  popup.js  settings.html  settings.js  settings.jsx  shared.js  sidepanel.js  styles.css  surface.js  theme.js  update.js  util-color.js  widgets-meta.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/installer/: hooks.nsh
src-tauri/src/: apps.rs  config.rs  lib.rs  main.rs  util.rs
src-tauri/src/win/: mod.rs  stub.rs  windows_impl.rs
src-winui/Booki.Dock/: App.xaml  App.xaml.cs  Booki.Dock.csproj  DockWindow.xaml  DockWindow.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  NotchWindow.xaml  NotchWindow.xaml.cs  Package.appxmanifest  app.manifest
src-winui/Booki.Dock/Installer/: Booki-Punkable.cer  BookiDock.appinstaller.template  BookiDock.iss
src-winui/Booki.Dock/Models/: BookiSettings.cs
src-winui/Booki.Dock/Pages/: SettingsPage.xaml  SettingsPage.xaml.cs
src-winui/Booki.Dock/Properties/: launchSettings.json
src-winui/Booki.Dock/Services/: AppIconService.cs  AutostartService.cs  ContextMenuService.cs  SettingsStore.cs  SingleInstanceService.cs  UpdateService.cs  WindowStateService.cs
