[package]
name = "booki-dock"
version = "0.60.0"
description = "Booki — a modern, lightweight dock for Windows"
authors = ["Booki"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "booki_dock_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-dialog = "2"
tauri-plugin-log = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
# Ensure only one Booki runs: a second launch reveals the existing dock instead
# of opening a duplicate (dock + notch + tray).
tauri-plugin-single-instance = "2"
# Native drag-out: drag a file from the folder flyout into Explorer/other apps.
tauri-plugin-drag = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
base64 = "0.22"
log = "0.4"
# System metrics for the dock widgets (CPU / memory / network). Cross-platform.
sysinfo = "0.32"
# Tiny HTTP client to fetch a website's favicon when pinning it as a widget.
ureq = "2"

# Native window material (Acrylic/Mica on Windows; no-op elsewhere).
[target.'cfg(windows)'.dependencies.window-vibrancy]
version = "0.6"

# Windows-only native integration (Win32 bindings + icon encoding).
[target.'cfg(windows)'.dependencies]
png = "0.17"
windows-dpapi = "0.2"
# Decode the desktop wallpaper to derive an accent color from it.
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "bmp"] }

[target.'cfg(windows)'.dependencies.windows]
version = "0.58"
features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Media_Audio",
    "Win32_Media_Audio_Endpoints",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_Com",
    "Win32_System_Power",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
    "Win32_System_Registry",
    "Win32_System_Threading",
    "Win32_UI_HiDpi",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Media_Control",
    "Foundation",
    "Foundation_Collections",
    "Storage_Streams",
]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
